--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-venv/
+*env/
 
 *.pyc
 __pycache__/
@@ -10,3 +10,12 @@ htmlcov/
 dist/
 build/
 *.egg-info/
+
+.ipynb_checkpoints/*
+data/*
+*.ipynb
+Dataset generator/images/*
+Dataset generator/masks/*
+
+static/uploads/*.jpg
+static/uploads/*.png
