--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,9 @@ Pillow==8.3.2
 python-dateutil==2.8.2
 pytz==2021.1
 six==1.16.0
-torch==1.9.1
-torchvision==0.10.1
+torch==1.8.2
+torchvision==0.9.2
 typing-extensions==3.10.0.2
 opencv-python==4.5.4.58
 tqdm==4.62.3
+--extra-index-url https://download.pytorch.org/whl/lts/1.8/cpu
